Documentation pass on cnv.Launch